[package]
name = "ripro-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-rc.3" }
tokio = { version = "1" }
sqlx = { version = "0.5.10", features=["runtime-tokio-native-tls"] }
dotenv = { version = "0.15.0" }
serde = { version = "1" , features=["derive"] }
config = { version = "0.11.0" }

env_logger = "0.9"
log = "0.4"